--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.0-beta3",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.0",
+    "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-components": "^0.5.1",
