Fixing css for nav and Somewhat useable Big Calendar(I made a exmple data in event.js)

--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@popperjs/core": "^2.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.0-beta3",
+    "cldr-data": "^36.0.0",
+    "date-fns": "^2.21.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.0",
+    "globalize": "^1.6.0",
+    "iana-tz-data": "^2019.1.0",
     "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.33.2",
     "react-components": "^0.5.1",
     "react-dom": "^17.0.1",
     "react-popper": "^2.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tackle-box": "^2.1.0",
     "sass": "^1.32.11",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.0.1"
