--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.21.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.3.0",
+    "formik": "^2.2.6",
     "globalize": "^1.6.0",
     "iana-tz-data": "^2019.1.0",
     "jquery": "^3.6.0",
@@ -28,7 +29,8 @@
     "react-tackle-box": "^2.1.0",
     "sass": "^1.32.11",
     "styled-components": "^5.2.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
