--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-big-calendar": "^0.33.2",
     "react-components": "^0.5.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.4.0",
     "react-popper": "^2.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
